--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - docker build -t thomasreuss/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true thomasreuss/docker-react npm test
+  - docker run -e CI=true thomasreuss/react-test npm test
 
 deploy:
   provider: script
